new proj/src/objects/GE_OG_Request_Type_O_G__c.object
<CustomObject>
    <description>Created for the Oil&amp;Gas Workflows.</description>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Antisurge_controlled_by__c</fullName>
        <label>Antisurge controlled by</label>
        <picklist>
            <picklistValues>
                <fullName>Unit Control Panel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCC Antisurge Control</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Application_Engineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application Engineer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Request_Types_O_G2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Buyer_DUNS__c</fullName>
        <formula>Opportunity__r.Account.GE_HQ_DUNS_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buyer DUNS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Buyer_Name__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buyer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_CMS_Oppty_ID__c</fullName>
        <formula>Opportunity__r.GE_OG_TM_Oppty_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CMS Oppty ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_CMS_Project_ID__c</fullName>
        <formula>Opportunity__r.GE_ES_Project__r.GE_ES_Project_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CMS Project ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Contact_person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact person</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Request_Types_O_G3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Control_Panel__c</fullName>
        <inlineHelpText>Multiple choices available</inlineHelpText>
        <label>Control Panel</label>
        <picklist>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speedtronic Mark VI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speedtronic Mark VIe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLC GE Fanuc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLC Siemens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLC Allen Bradley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLC Honeywell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Woodward</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bently Nevada 3500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System One</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bently Nevada 1701</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Course_Language__c</fullName>
        <label>Course Language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Italian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portuguese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Course_Type__c</fullName>
        <label>Course Type</label>
        <picklist>
            <picklistValues>
                <fullName>Operation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operation &amp; Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NP Standard</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Course_duration__c</fullName>
        <label>Course duration</label>
        <picklist>
            <picklistValues>
                <fullName>NP standard</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10 Days</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Driven_Machine__c</fullName>
        <label>Driven Machine</label>
        <picklist>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Centrifugal Compressor NP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Centrifugal Compressor TD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Centrifugal Compressor AC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reciprocating Compressor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Centrifugal Pump</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electric Generator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turboexpander Compressor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Driver_Machine__c</fullName>
        <label>Driver Machine</label>
        <picklist>
            <picklistValues>
                <fullName>Not Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heavy Duty Gas Turbine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aeroderivative Gas Turbine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electric Motor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Variable Speed Drive System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steam Turbine NP-GE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steam Turbine TD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turboexpander</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_EPC_DUNS__c</fullName>
        <formula>Opportunity__r.GE_OG_TM_EPC__r.GE_HQ_DUNS_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EPC DUNS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_EPC_Name__c</fullName>
        <formula>Opportunity__r.GE_OG_TM_EPC__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EPC Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_End_Customer_Country__c</fullName>
        <label>End Customer Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_End_Customer_DUNS__c</fullName>
        <formula>Opportunity__r.Account.GE_HQ_DUNS_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Customer DUNS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_End_Customer_Name__c</fullName>
        <label>End Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_HD_Combustion_System__c</fullName>
        <label>HD Combustion System</label>
        <picklist>
            <picklistValues>
                <fullName>STD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DLN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_JET_Combustion_System__c</fullName>
        <label>JET Combustion System</label>
        <picklist>
            <picklistValues>
                <fullName>SAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DLE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Job_documentation_language__c</fullName>
        <label>Job documentation language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Italian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portuguese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Location__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>Florence at GE premises</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Site at customer premises</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End user&apos;s country at GE premises/Hotel</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Machine_Delivery_Time__c</fullName>
        <label>Machine Delivery Time</label>
        <picklist>
            <picklistValues>
                <fullName>Q1 2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q2 2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q3 2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4 2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q1 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q2 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q3 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q1 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q2 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q3 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q1 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q2 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q3 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4 2013</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Number_of_trainees__c</fullName>
        <defaultValue>10</defaultValue>
        <inlineHelpText>suggested max 10 per session</inlineHelpText>
        <label>Number of trainees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Offering_Amount__c</fullName>
        <formula>Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Offering Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Other_in_Scope__c</fullName>
        <label>Other in Scope</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Other_notes__c</fullName>
        <label>Other notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Please_specify__c</fullName>
        <inlineHelpText>Country, City, Plant name, Distance from the main city, Nearest airport</inlineHelpText>
        <label>Please specify</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Please_specify_the_CCC_Series__c</fullName>
        <label>Please specify the CCC Series</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Please_specify_the_model__c</fullName>
        <label>Please specify the model</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Please_specify_the_model_s__c</fullName>
        <label>Please specify the model(s)</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Please_specify_the_models__c</fullName>
        <label>Please specify the model(s)</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Project_Name__c</fullName>
        <formula>Opportunity__r.GE_ES_Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Proposal_Due_Date__c</fullName>
        <formula>Opportunity__r.GE_OG_TM_Technical_Proposal_Due_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proposal Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_REV_0_ITO_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>REV.0 ITO Owner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>GE_OG_TM</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Request_Types_O_G</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_REV_N_Offering_Amount__c</fullName>
        <formula>Opportunity__r.Amount</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>REV.N Offering Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Requestor_Type__c</fullName>
        <label>Requestor Type</label>
        <picklist>
            <picklistValues>
                <fullName>Turbomachinery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GS CSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GS Solution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GS Core</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Rev_N_ITO_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rev.N ITO Owner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>GE_OG_TM</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Request_Types_O_G1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_T_L_Expense_Customer_Trainees_F__c</fullName>
        <label>T&amp;L Expenses for Customer Trainees in Fl</label>
        <picklist>
            <picklistValues>
                <fullName>At Customer&apos;s Charge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To be included in NP Proposal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Training_manuals_language__c</fullName>
        <label>Training manuals language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Italian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portuguese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Turboexpander_Bearings__c</fullName>
        <label>Turboexpander Bearings</label>
        <picklist>
            <picklistValues>
                <fullName>Oil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active Magnetic</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Validity_of_Quotation__c</fullName>
        <label>Validity of Quotation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Workflow_Requested_On__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Workflow Requested On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_OG_TM_Year_Period_to_be_held__c</fullName>
        <inlineHelpText>recommended after commissioning</inlineHelpText>
        <label>Year/Period to be held</label>
        <picklist>
            <picklistValues>
                <fullName>Q3 2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4 2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q1 2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q2 2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q3 2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4 2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q1 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q2 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q3 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4 2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q1 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q2 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q3 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q1 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q2 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q3 2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4 2013</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Request Types(O&amp;G)</relationshipLabel>
        <relationshipName>Request_Types_O_G</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Request Type(O&amp;G)</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Request Type(O&amp;G)</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Request Types(O&amp;G)</pluralLabel>
    <recordTypes>
        <fullName>GE_O_G_TM_AE_Requests</fullName>
        <active>true</active>
        <label>O&amp;G TM AE Requests</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_O_G_TM_Bid_Bond_Request</fullName>
        <active>true</active>
        <label>O&amp;G TM Bid Bond Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_O_G_TM_Boicott_Country_Request</fullName>
        <active>true</active>
        <label>O&amp;G TM Boicott Country Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_O_G_TM_Business_Release_Request</fullName>
        <active>true</active>
        <label>O&amp;G TM Business Release Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_O_G_TM_CSA_Request</fullName>
        <active>true</active>
        <label>O&amp;G TM CSA Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_O_G_TM_Installation_or_TK_Request</fullName>
        <active>true</active>
        <label>O&amp;G TM Installation or TK Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_O_G_TM_Iraq_Bidding_Request</fullName>
        <active>true</active>
        <label>O&amp;G TM Iraq Bidding Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_O_G_TM_Logistic_Request</fullName>
        <active>true</active>
        <label>O&amp;G TM Logistic Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_O_G_TM_POA_Request</fullName>
        <active>true</active>
        <label>O&amp;G TM POA Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_O_G_TM_Sales_Requests</fullName>
        <active>true</active>
        <label>O&amp;G TM Sales Requests</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_O_G_TM_Slotting_Request</fullName>
        <active>true</active>
        <label>O&amp;G TM Slotting Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_O_G_TM_Spare_Parts_Request</fullName>
        <active>true</active>
        <label>O&amp;G TM Spare Parts Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_O_G_TM_String_Test_Request</fullName>
        <active>true</active>
        <label>O&amp;G TM String Test Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_O_G_TM_T_C_Comments_Request</fullName>
        <active>true</active>
        <label>O&amp;G TM T&amp;C Comments Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_O_G_TM_Training_Request</fullName>
        <active>true</active>
        <label>O&amp;G TM Training Request</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>